--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://SkillFix.github.io/todoList",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /todoList"
+    "build": "parcel build src/*.html --public-url /todoList/"
   },
   "repository": {
     "type": "git",
